{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 54,
  "lineage": "7abb9f0c-8050-b7f0-178e-e88ad894fc63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075796e5b17f1a1cf",
            "association_id": "eipassoc-0df7301ea3b88fe90",
            "domain": "vpc",
            "id": "eipalloc-075796e5b17f1a1cf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-039f4dabd7ea746c1",
            "private_dns": "ip-10-0-101-69.ec2.internal",
            "private_ip": "10.0.101.69",
            "public_dns": "ec2-44-207-174-116.compute-1.amazonaws.com",
            "public_ip": "44.207.174.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_igw_eip"
            },
            "tags_all": {
              "Name": "demo_igw_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:internet-gateway/igw-0154ac6f943592109",
            "id": "igw-0154ac6f943592109",
            "owner_id": "606175617475",
            "tags": {
              "Name": "demo_igw"
            },
            "tags_all": {
              "Name": "demo_igw"
            },
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075796e5b17f1a1cf",
            "connectivity_type": "public",
            "id": "nat-0d1bcaaa06472ac17",
            "network_interface_id": "eni-039f4dabd7ea746c1",
            "private_ip": "10.0.101.69",
            "public_ip": "44.207.174.116",
            "subnet_id": "subnet-01c5448789b618d03",
            "tags": {
              "Name": "demo_nat_gateway"
            },
            "tags_all": {
              "Name": "demo_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:route-table/rtb-0f80167ceab1d5606",
            "id": "rtb-0f80167ceab1d5606",
            "owner_id": "606175617475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1bcaaa06472ac17",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_private_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_private_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:route-table/rtb-0d555efec32d9b665",
            "id": "rtb-0d555efec32d9b665",
            "owner_id": "606175617475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0154ac6f943592109",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_public_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_public_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9cea299ebc5d0c9",
            "route_table_id": "rtb-0f80167ceab1d5606",
            "subnet_id": "subnet-07a8867ea5eb50ee5"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d98d617e84d48ca5",
            "route_table_id": "rtb-0f80167ceab1d5606",
            "subnet_id": "subnet-0909373c578691a31"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d582b695e6c351f2",
            "route_table_id": "rtb-0f80167ceab1d5606",
            "subnet_id": "subnet-047f06752c2dd877d"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d3faf4203141110",
            "route_table_id": "rtb-0d555efec32d9b665",
            "subnet_id": "subnet-01c5448789b618d03"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff6edfd01b16b1e6",
            "route_table_id": "rtb-0d555efec32d9b665",
            "subnet_id": "subnet-0c1d35f867db8242c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd71e1e15b225dda",
            "route_table_id": "rtb-0d555efec32d9b665",
            "subnet_id": "subnet-0f32335b23c99746d"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:subnet/subnet-07a8867ea5eb50ee5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a8867ea5eb50ee5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "606175617475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:subnet/subnet-0909373c578691a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0909373c578691a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "606175617475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:subnet/subnet-047f06752c2dd877d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047f06752c2dd877d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "606175617475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:subnet/subnet-01c5448789b618d03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c5448789b618d03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "606175617475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:subnet/subnet-0c1d35f867db8242c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d35f867db8242c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "606175617475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:subnet/subnet-0f32335b23c99746d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f32335b23c99746d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "606175617475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-030201bb45acf1472"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606175617475:vpc/vpc-030201bb45acf1472",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0980bdf0851e692d2",
            "default_route_table_id": "rtb-0c90139ebf95c252c",
            "default_security_group_id": "sg-0a95f640cc0f2237a",
            "dhcp_options_id": "dopt-09be9443cd40c572d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-030201bb45acf1472",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c90139ebf95c252c",
            "owner_id": "606175617475",
            "tags": {
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Region": "us-east-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Region": "us-east-1",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}